--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -240,55 +240,28 @@ a.connectivity-link { color: #EA7518; }
 a.identity-link { color: #1A534C; }
 a.creativity-link { color: #29867B; }
 
-
-/* =Swiper
--------------------------------------------------------------- */
-
-.swiper-container {
-  width: 100%;
-  height: auto;
-}
-.swiper-slide {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  opacity: 0;
-  -webkit-transition: opacity 1.2s;
-          transition: opacity 1.2s;
-}
-.swiper-slide-active {
-}
-.swiper-slide-visible {
-
-  opacity: 1;
-}
-.swiper-pagination-switch {
-}
-.swiper-active-switch {
-}
-.swiper-visible-switch {
-}
-
-.swiper-slide .vision {
+/* Visions */
+.vision {
   position: relative;
   margin: 0;
-  padding: 1em 1.5em 2.25em;
+  padding: 1em 1.5em;
 }
-.swiper-slide .vision p {
+.vision p {
   position: relative;
   margin: 0;
   z-index: 3;
+  min-height: 3.875em;
 }
-.swiper-slide .balloon {
-  position: absolute;
-  top: 0.5em;
-  right: 0.5em;
-  bottom: 1.5em;
-  left: 0.5em;
-  z-index: 1;
+.balloon {
   background: #fff;
   border-radius: 1em;
   box-shadow: 0 0.125em 0.25em rgba(0,0,0,0.25);
+  position: absolute;
+  top: 0.5em;
+  right: 0.5em;
+  bottom: 0.5em;
+  left: 0.5em;
+  z-index: 1;
 }
 .tail {
   color: #fff;
@@ -302,6 +275,72 @@ a.creativity-link { color: #29867B; }
   margin-left: -0.5em;
   line-height: 1;
 }
+.tail-left {
+  top: 1.25em;
+  left: 0;
+  margin-top: -0.5em;
+  margin-left: -0.5em;
+  text-shadow: -0.1em 0.05em 0.1em rgba(0,0,0,0.1);
+}
+
+/* Vision List */
+.vision-list {
+  list-style: none;
+  padding: 0;
+  margin: 0 0 1em;
+}
+.vision-list li {
+  margin: 0 0 0 3.5em;
+  padding: 0;
+  position: relative;
+}
+.vision-list .user-link {
+  width: 2.5em;
+  display: block;
+  position: absolute;
+  top: 1.125em;
+  right: 100%;
+  margin-right: 1em;
+  background-color: #d7d7c7;
+}
+.vision-list .vision-link {
+  display: block;
+  text-decoration: none;
+  color: #444;
+  margin: -0.5em -1em -0.5em -1.25em;
+  padding: 0.5em 1em 0.5em 1.25em;
+}
+.user-link .avatar {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+/* Swiper */
+.swiper-container {
+  width: 100%;
+  height: auto;
+}
+.swiper-slide {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  opacity: 0;
+  -webkit-transition: opacity 1.2s;
+          transition: opacity 1.2s;
+}
+.swiper-slide-active {}
+.swiper-slide-visible { opacity: 1; }
+.swiper-pagination-switch {}
+.swiper-active-switch {}
+.swiper-visible-switch {}
+
+.swiper-slide .vision {
+  padding: 1em 1.5em 2.25em;
+}
+.swiper-slide .balloon {
+  bottom: 1.5em;
+}
 .first .tail    { left: 14%; }
 .second .tail   { left: 26%; }
 .third .tail    { left: 38%; }
@@ -314,7 +353,6 @@ a.creativity-link { color: #29867B; }
 .swiper-nav {
   margin: 0 0 2em;
 }
-
 .swiper-nav-list {
   list-style: none;
   padding: 0;
@@ -329,6 +367,7 @@ a.creativity-link { color: #29867B; }
 .swiper-nav .avatar {
   width: 100%;
   height: auto;
+  display: block;
 }
 .swiper-nav li:first-child {
   margin-left: 8%;
