--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -52,8 +52,9 @@
   <script src="{{ STATIC_URL }}components/handlebars.js/dist/handlebars.js"></script>
   <script src="{{ STATIC_URL }}components/moment/moment.js"></script>
   <script src="{{ STATIC_URL }}components/swiper/dist/idangerous.swiper-2.0.js"></script>
-  <script src="{{ STATIC_URL }}js/handlebars-helpers.js"></script>
   <script src="{{ STATIC_URL }}js/django-csrf.js"></script>
+  <script src="{{ STATIC_URL }}js/config.js"></script>
+  <script src="{{ STATIC_URL }}js/handlebars-helpers.js"></script>
   <script src="{{ STATIC_URL }}js/models.js"></script>
   <script src="{{ STATIC_URL }}js/views.js"></script>
   <script src="{{ STATIC_URL }}js/app.js"></script>
