Render the share buttons everytime.

--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -32,6 +32,16 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
   <![endif]-->
+
+  <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+  <script type="text/javascript">
+    stLight.options({
+      publisher: "ur-b9846a61-9e48-968d-641f-faa02f559bbf",
+      doNotHash: false,
+      doNotCopy: false,
+      hashAddressBar: false
+    });
+  </script>
 </head>
 <body>
   {% handlebarsjs '(.*)' %}
