Set share values in the item template

--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -37,8 +37,8 @@
   <script type="text/javascript">
     stLight.options({
       publisher: "ur-b9846a61-9e48-968d-641f-faa02f559bbf",
-      doNotHash: false,
-      doNotCopy: false,
+      doNotHash: true,
+      doNotCopy: true,
       hashAddressBar: false
     });
   </script>
