--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -49,6 +49,14 @@
   <div class="site-header">
     <div class="container">
       <h1 class="site-title"><span><a href="#" title="Vision West Louisville" rel="home">Vision West Louisville</a></span></h1>
+
+      <span class="authentication">
+        {% if user.is_authenticated %}
+          {{ user.username }} <a href="{% url 'logout' %}">Log out</a>
+        {% else %}
+          <a href="{% url 'socialauth_begin' backend='twitter' %}">Log in</a>
+        {% endif %}
+      </span>
     </div>
   </div><!-- end .site-header -->
 
