--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -50,15 +50,24 @@
   {% handlebarsjs '(.*)' %}
 
   <div class="site-header">
-    <div class="container">
-      <h1 class="site-title"><span><a href="#" title="Vision West Louisville" rel="home">Vision West Louisville</a></span></h1>
-
-      <nav class="authentication-menu">
-        {% if user.is_authenticated %}
-          {{ user.username }} <a href="{% url 'logout' %}">Log out</a>
-        {% else %}
-          <a href="{% url 'socialauth_begin' backend='twitter' %}">Log in</a>
-        {% endif %}
+    <div class="container clearfix">
+      <h1 class="site-title"><a href="#" title="Vision West Louisville" rel="home"><img src="{{ STATIC_URL }}images/vizlou-logo.png" class="logo"><span class="is-hidden">Vision West Louisville</span></a></h1>
+      <nav class="main-menu">
+        <ul>
+          {% if user.is_authenticated %}
+          <li class="user-menu-item">
+            <a href="#" class="user-menu-avatar"><img src="https://si0.twimg.com/profile_images/378800000097665633/6bf91a2cb9b7a9db783c8c9f0baf9c84_bigger.jpeg"></a>
+            <ul class="user-menu">
+              <li class="sub-menu-item"><a href="{% url 'logout' %}" class="authentication-link authentication-link-logout">Log out</a></li>
+            </ul>
+          </li>
+          {% else %}
+          <li class="main-menu-item"><a href="{% url 'socialauth_begin' backend='twitter' %}" class="authentication-link authentication-link-login">Sign In <img src="{{ STATIC_URL }}images/nav-twitter.png" class="twitter-icon"></a></li>
+          {% endif %}
+          <li class="main-menu-item add-vision"><a href="#"><img src="{{ STATIC_URL }}images/nav-addviz.png" class="menu-icon"><span class="is-hidden">Add My Vision</span></a></li>
+          <li class="main-menu-item list-users"><a href="#"><img src="{{ STATIC_URL }}images/nav-users.png" class="menu-icon"><span class="is-hidden">Users</span></a></li>
+          <li class="main-menu-item list-visions"><a href="#"><img src="{{ STATIC_URL }}images/nav-list.png" class="menu-icon"><span class="is-hidden">Visions</span></a></li>
+        </ul>
       </nav>
     </div>
   </div><!-- end .site-header -->
