Add STATIC_URL Handlebars helper

--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -90,6 +90,7 @@
   <script>
     var {{NS}} = {{NS}} || {};
     {{NS}}.currentUserData = {{ user_json|safe }};
+    {{NS}}.staticURL = '{{ STATIC_URL|safe }}';
   </script>
 
   <script src="{{ STATIC_URL }}components/jquery/jquery.js"></script>
