--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -96,6 +96,7 @@
   <script src="{{ STATIC_URL }}components/jquery/jquery.js"></script>
   <script src="{{ STATIC_URL }}components/underscore/underscore-min.js"></script>
   <script src="{{ STATIC_URL }}components/backbone/backbone.js"></script>
+  <script src="{{ STATIC_URL }}components/backbone-relational/backbone-relational.js"></script>
   <script src="{{ STATIC_URL }}components/backbone.marionette/lib/backbone.marionette.js"></script>
   <script src="{{ STATIC_URL }}components/handlebars.js/dist/handlebars.js"></script>
   <script src="{{ STATIC_URL }}components/moment/moment.js"></script>
