--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -78,7 +78,9 @@
           <li class="main-menu-item"><a href="{% url 'socialauth_begin' backend='twitter' %}" class="authentication-link authentication-link-login">Sign In <img src="{{ STATIC_URL }}images/nav-twitter.png" class="twitter-icon"></a></li>
           {% endif %}
           
+          {% if user.is_authenticated %}
           <li class="main-menu-item add-vision"><a href="/visions/new"><img src="{{ STATIC_URL }}images/nav-addviz.png" class="menu-icon"><span class="is-hidden">Add My Vision</span></a></li>
+          {% endif %}
           <li class="main-menu-item list-users"><a href="/users/list"><img src="{{ STATIC_URL }}images/nav-users.png" class="menu-icon"><span class="is-hidden">Users</span></a></li>
           <li class="main-menu-item list-visions"><a href="/visions/list"><img src="{{ STATIC_URL }}images/nav-list.png" class="menu-icon"><span class="is-hidden">Visions</span></a></li>
         </ul>
